# rust-ascii-canvas

./: .gitignore  .ignore  .loc-allowlist  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  MODERNIZATION_2026_REPORT.md  PR_DESCRIPTION.md  README.md  clippy.toml  commit_msg.txt  deny.toml  fix_clippy.py  mise.toml  netlify.toml  opencode.json  package-lock.json  package.json  patch_main_lint.js  playwright.config.ts  pnpm-lock.yaml  skills-lock.json  vite.config.ts  wasm-pack.toml
.blackboxcli/: settings.json
.cargo/: config.toml
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  SECURITY.md  dependabot.yml
.jules/: palette.md
agents-docs/: AGENTS.md  SKILL_TEMPLATE.md  architecture.md  best-practices.md  harness.md  learnings-archive-phase1.md  learnings-archive.md  responsive-grid.md
benches/: font_bench.rs  grid_bench.rs
e2e/: README.md  canvas.spec.ts  clipboard.spec.ts  helpers.ts  responsive.spec.ts  tools-drawing.spec.ts
plans/: FOLLOW_UPS.md  PRODUCTION_READINESS_PLAN.md  PROJECT_STATUS.md  README.md  TECHNICAL_ANALYSIS.md  action-log.md  bug-analysis-2026-03-04.md  current-plan.md  e2e-test-enhancement-plan.md  frontend-ui-modernization-plan.md  full-recommendations-2026-07.md  gap-analysis-enhancement-roadmap.md  github-monitoring-report-2026-03-03.md  goal-state.md  harness-engineering-2026-07.md  implementation-focus-fix.md  pr22-fix-plan.md
playwright-report/: index.html
scripts/: check-architecture.sh  pre-commit-fast.sh  quality-gates.sh  release.sh
src/: lib.rs
web/: clipboard.test.ts  (+24 more)
(+127 files in other folders)
