[package]
name = "ascii-canvas"
version = "0.1.0"
edition = "2021"
description = "A fast ASCII diagram editor compiled to WebAssembly"
license = "MIT"
repository = "https://github.com/user/ascii-canvas"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1"
web-sys = { version = "0.3", features = [
    "Window",
    "Document",
    "Element",
    "HtmlElement",
    "HtmlCanvasElement",
    "CanvasRenderingContext2d",
    "TextMetrics",
    "MouseEvent",
    "KeyboardEvent",
    "WheelEvent",
    "PointerEvent",
    "EventTarget",
    "Clipboard",
    "Navigator",
    "CssStyleDeclaration",
    "DomRect",
] }
js-sys = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"
smallvec = { version = "1.13", features = ["const_generics", "const_new"] }
bitflags = { version = "2.5", features = ["serde"] }

[dev-dependencies]
wasm-bindgen-test = "0.3.42"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 1

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[[test]]
name = "core_tests"
path = "tests/core/mod.rs"
